--- a/suporte.html
+++ b/suporte.html
@@ -4,17 +4,18 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
-  <title>ELIAS EMPRESAS</title>
-  <img src="IMAGENS/LOGO DAS ELIAS EMPRESAS (1-1).png" alt="Logo da minha empresa"  title="Elias Empresas">
+  <title>SUPORTE</title>
+  <img src="imagens/LOGO DAS ELIAS EMPRESAS (1-1).png" alt="Logo da minha empresa"  title="Elias Empresas">
   <body>
     <!-- Ícone de hambúrguer -->
-    <div class="menu-icon" id="menu-icon">
+    <div class="menu-icon" aria-label="Menu" onclick="toggleMenu()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
+
     <!-- Menu de navegação -->
-    <nav id="nav-menu">
+    <nav id="menu">
         <ul>
       <li><a href="index.html">INICIO</a></li>
       <li><a href="https://lojadecoisas.com">LOJA DE COISAS</a></li>
@@ -25,10 +26,16 @@
     <script src="scripts/script.js"></script>
 </head>
 <body>
-  <h1 style="color:red;">ELIAS EMPRESAS</h1>
-  <h2>Olá bem-vindo ao site das Elias Empresas</h2>
-    </div>
-  <!-- Rodapé -->
+  <h1 style="color:red;">ELIAS EMPRESAS SUPORTE</h1>
+  <h2>Olá bem-vindo ao suporte das Elias Empresas</h2>
+  <a href="mailto:eliasempresasBOT@gmail.com?subject=Entrar%20em%20contato,%20EIAS%20EMPRESAS%20SUPORTE&body=Olá,%20eu%20gueria%20entrar%20em%20contato,%20eu%20tenho%20algum%20plobema%20com%20as%20ELIAS%20EMPRESAS">Entrar em contato pelo email</a>
+  <p></p>  
+  <a href="tel:5514998442081">Entrar em contato pelo telefone</a>
+  <p></p>
+  <a href="https://wa.me/5514998442081?text=Olá,%20queria%20saber%20mais%20sobre%20as%20Elias%20Empresas">Entrar em contato pelo WhastApp</a>
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Rodapé -->
 <footer>
     <div class="container">
         <p>&copy; 2025 Elias Empresas. Todos os direitos reservados.</p>
@@ -60,6 +67,5 @@
         </div>
     </div>
 </footer>
-    </script>
 </body>
 </html>
