--- a/suporte.html
+++ b/suporte.html
@@ -5,7 +5,8 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
   <title>SUPORTE</title>
-  <img src="imagens/LOGO DAS ELIAS EMPRESAS (1-1).png" alt="Logo da minha empresa"  title="Elias Empresas">
+  <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
+  <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/LOGO DAS ELIAS EMPRESAS (1-1).png" alt="Logo da minha empresa"  title="Elias Empresas">
   <body>
     <!-- Ícone de hambúrguer -->
     <div class="menu-icon" aria-label="Menu" onclick="toggleMenu()">
@@ -41,28 +42,28 @@
         <p>&copy; 2025 Elias Empresas. Todos os direitos reservados.</p>
         <div class="social-media">
             <a href="https://youtube.com/@eliasempresas" target="_blank">
-                <img src="imagens/youtube.svg" alt="YouTube" class="social-icon"> YouTube
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/youtube.svg" alt="YouTube" class="social-icon"> YouTube
             </a>
             <a href="https://facebook.com/eliasempresas0" target="_blank">
-                <img src="imagens/facebook.svg" alt="Facebook" class="social-icon"> Facebook
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/facebook.svg" alt="Facebook" class="social-icon"> Facebook
             </a>
             <a href="https://instagram.com/eliasempresas" target="_blank">
-                <img src="imagens/instagram.svg" alt="Instagram" class="social-icon"> Instagram
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/instagram.svg" alt="Instagram" class="social-icon"> Instagram
             </a>
             <a href="https://x.com/eliasempresas" target="_blank">
-                <img src="imagens/x-twitter.svg" alt="X" class="social-icon"> X
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/x-twitter.svg" alt="X" class="social-icon"> X
             </a>
             <a href="https://tiktok.com/@eliasempresas" target="_blank">
-                <img src="imagens/tiktok.svg" alt="TikTok" class="social-icon"> TikTok
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/tiktok.svg" alt="TikTok" class="social-icon"> TikTok
             </a>
             <a href="https://pinterest.com/eliasempresas" target="_blank">
-                <img src="imagens/pinterest.svg" alt="Pinterest" class="social-icon"> Pinterest
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/pinterest.svg" alt="Pinterest" class="social-icon"> Pinterest
             </a>
             <a href="https://t.me/eliasempresas" target="_blank">
-                <img src="imagens/telegram.svg" alt="Telegram" class="social-icon"> Telegram
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/telegram.svg" alt="Telegram" class="social-icon"> Telegram
             </a>
             <a href="https://linkedin.com/company/eliasempresas" target="_blank">
-                <img src="imagens/linkedin.svg" alt="LinkedIn" class="social-icon"> LinkedIn
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/linkedin.svg" alt="LinkedIn" class="social-icon"> LinkedIn
             </a>
         </div>
     </div>
