--- a/mapa.html
+++ b/mapa.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa do Site</title>
+    <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
+    <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/IMAGENS/LOGO DAS ELIAS EMPRESAS (1-1).png" alt="Logo da minha empresa"  title="Elias Empresas">
+  <body>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -31,73 +34,78 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="suporte.html">Suporte</a></li>
             <li><a href="mapa.html">Mapa do site</a></li>
+            <li><a href="servidor/index.html">Servidor</a></li>
+            <li><a href="servidor/loja.html">Loja do Servidor</a></li>
+            <li><a href="podcast/index.html">Podcast</a></li>
+            <li><a href="podcast/episodio1.html">Podcast Episódio 1</a></li>
+            <li><a href="podcast/episodio2.html">Podcast Episódio 2</a></li>
             <li><a href="politica-de-privacidade.html">Política de Privacidade</a></li>
             <li><a href="termos-de-uso.html">Termos de Uso</a></li>
         </ul>
         
         <h3>ID EE</h3>
         <ul class="map-links">
-            <li><a href="id-ee.html">Página ID EE</a></li>
+            <li><a href="https://id.eliasempresas.com">Página ID EE</a></li>
         </ul>
 
         <h3>LOJA DE COISAS</h3>
         <ul class="map-links">
-            <li><a href="loja-de-coisas.html">Página Loja de Coisas</a></li>
+            <li><a href="https://www.lojadecoisas.com">Página Loja de Coisas</a></li>
         </ul>
 
         <h3>ELIAS EMPRESAS SOCIAL</h3>
         <ul class="map-links">
-            <li><a href="elias-empresas-social.html">Página Elias Empresas Social</a></li>
+            <li><a href="https://www.eliasempresas.social">Página Elias Empresas Social</a></li>
         </ul>
 
         <h3>ELIAS EMPRESAS BLOG</h3>
         <ul class="map-links">
-            <li><a href="elias-empresas-blog.html">Página Elias Empresas Blog</a></li>
+            <li><a href="https://www.eliasempresas.blog">Página Elias Empresas Blog</a></li>
         </ul>
 
         <h3>MINECRAFT REALISTA</h3>
         <ul class="map-links">
-            <li><a href="minecraft-realista.html">Página Minecraft Realista</a></li>
+            <li><a href="https://www.minecraft-realista.com">Página Minecraft Realista</a></li>
         </ul>
 
         <h3>PONTOS</h3>
         <ul class="map-links">
-            <li><a href="pontos.html">Página Pontos</a></li>
+            <li><a href="https://www.pontos.com">Página Pontos</a></li>
         </ul>
 
         <h3>PAINEL</h3>
         <ul class="map-links">
-            <li><a href="painel.html">Página Painel</a></li>
+            <li><a href="https://www.painel.com">Página Painel</a></li>
         </ul>
 
         <h3>PC VIRTUAL</h3>
         <ul class="map-links">
-            <li><a href="pc-virtual.html">Página PC Virtual</a></li>
+            <li><a href="https://www.pcvirtual.com">Página PC Virtual</a></li>
         </ul>
 
         <h3>DONIMIOS ESTANHOS</h3>
         <ul class="map-links">
-            <li><a href="donimios-estanhos.html">Página Donimios Estanhos</a></li>
+            <li><a href="https://www.donimiosestanhos.com">Página Donimios Estanhos</a></li>
         </ul>
 
         <h3>BRINQUEDOS</h3>
         <ul class="map-links">
-            <li><a href="brinquedos.html">Página Brinquedos</a></li>
+            <li><a href="https://www.brinquedos.com">Página Brinquedos</a></li>
         </ul>
 
         <h3>CASA</h3>
         <ul class="map-links">
-            <li><a href="casa.html">Página Casa</a></li>
+            <li><a href="https://www.casa.com">Página Casa</a></li>
         </ul>
 
         <h3>JORNAL MACATUBA</h3>
         <ul class="map-links">
-            <li><a href="jornal-macatuba.html">Página Jornal Macatuba</a></li>
+            <li><a href="https://www.jornalmacatuba.com">Página Jornal Macatuba</a></li>
         </ul>
 
         <h3>ELIAS EMPRESAS INTERNACIONAL</h3>
         <ul class="map-links">
-            <li><a href="elias-empresas-internacional.html">Página Elias Empresas Internacional</a></li>
+            <li><a href="https://www.eliasempresasinternacional.com">Página Elias Empresas Internacional</a></li>
         </ul>
     </div>
 
@@ -107,31 +115,31 @@
             <p>&copy; 2025 Elias Empresas. Todos os direitos reservados.</p>
             <div class="social-media">
                 <a href="https://youtube.com/@eliasempresas" target="_blank">
-                    <img src="imagens/youtube.svg" alt="YouTube" class="social-icon"> YouTube
-                </a>
-                <a href="https://facebook.com/eliasempresas0" target="_blank">
-                    <img src="imagens/facebook.svg" alt="Facebook" class="social-icon"> Facebook
-                </a>
-                <a href="https://instagram.com/eliasempresas" target="_blank">
-                    <img src="imagens/instagram.svg" alt="Instagram" class="social-icon"> Instagram
-                </a>
-                <a href="https://x.com/eliasempresas" target="_blank">
-                    <img src="imagens/x-twitter.svg" alt="X" class="social-icon"> X
-                </a>
-                <a href="https://tiktok.com/@eliasempresas" target="_blank">
-                    <img src="imagens/tiktok.svg" alt="TikTok" class="social-icon"> TikTok
-                </a>
-                <a href="https://pinterest.com/eliasempresas" target="_blank">
-                    <img src="imagens/pinterest.svg" alt="Pinterest" class="social-icon"> Pinterest
-                </a>
-                <a href="https://t.me/eliasempresas" target="_blank">
-                    <img src="imagens/telegram.svg" alt="Telegram" class="social-icon"> Telegram
-                </a>
-                <a href="https://linkedin.com/company/eliasempresas" target="_blank">
-                    <img src="imagens/linkedin.svg" alt="LinkedIn" class="social-icon"> LinkedIn
-                </a>
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/youtube.svg" alt="YouTube" class="social-icon"> YouTube
+            </a>
+            <a href="https://facebook.com/eliasempresas0" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/facebook.svg" alt="Facebook" class="social-icon"> Facebook
+            </a>
+            <a href="https://instagram.com/eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/instagram.svg" alt="Instagram" class="social-icon"> Instagram
+            </a>
+            <a href="https://x.com/eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/x-twitter.svg" alt="X" class="social-icon"> X
+            </a>
+            <a href="https://tiktok.com/@eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/tiktok.svg" alt="TikTok" class="social-icon"> TikTok
+            </a>
+            <a href="https://pinterest.com/eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/pinterest.svg" alt="Pinterest" class="social-icon"> Pinterest
+            </a>
+            <a href="https://t.me/eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/telegram.svg" alt="Telegram" class="social-icon"> Telegram
+            </a>
+            <a href="https://linkedin.com/company/eliasempresas" target="_blank">
+                <img src="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/imagens/linkedin.svg" alt="LinkedIn" class="social-icon"> LinkedIn
+            </a>
             </div>
         </div>
     </footer>
 </body>
-</html>
+    </html>
