--- a/podcast/index.html
+++ b/podcast/index.html
@@ -33,14 +33,14 @@
 
   <div class="episodios">
     <div class="episodio">
-      <img src="https://arquivos.eliasempresas.com/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa Episódio 1">
+      <img src="https://arquivos.eliasempresas.rf.gd/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa Episódio 1">
       <div>
         <a href="episodio1.html">Episódio 1 - O que é as Elias Empresas</a>
         <p>Descubra o que são as Elias Empresas e como surgiram.</p>
       </div>
     </div>
     <div class="episodio">
-      <img src="https://arquivos.eliasempresas.com/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa Episódio 2">
+      <img src="https://arquivos.eliasempresas.rf.gd/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa Episódio 2">
       <div>
         <a href="episodio2.html">Episódio 2 - Música oficial das Elias Empresas</a>
         <p>Ouça a música que representa o espírito das Elias Empresas.</p>
