--- a/podcast/episodio1.html
+++ b/podcast/episodio1.html
@@ -14,10 +14,10 @@
 <body>
   <a href="index.html">&larr; Voltar ao podcast</a>
   <h1>Episódio 1 - O que é as Elias Empresas</h1>
-  <img src="https://arquivos.eliasempresas.com/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa do Episódio 1">
+  <img src="https://arquivos.eliasempresas.rf.gd/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa do Episódio 1">
   <p>Nesse episódio, falamos sobre como surgiram as Elias Empresas e sua missão.</p>
   <audio controls>
-    <source src="https://arquivos.eliasempresas.com/arquivos/videos/O que é as Elias Empresas.mp4" type="audio/mpeg">
+    <source src="https://arquivos.eliasempresas.rf.gd/arquivos/videos/O que é as Elias Empresas.mp4" type="audio/mpeg">
     Seu navegador não suporta o player de áudio.
   </audio>
 </body>
