--- a/podcast/episodio2.html
+++ b/podcast/episodio2.html
@@ -14,10 +14,10 @@
 <body>
   <a href="index.html">&larr; Voltar ao podcast</a>
   <h1>Episódio 2 - Música oficial das Elias Empresas</h1>
-  <img src="https://arquivos.eliasempresas.com/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa do Episódio 2">
+  <img src="https://arquivos.eliasempresas.rf.gd/arquivos/imagens/LOGO DAS ELIAS EMPRESAS(1,9-1).png" alt="Capa do Episódio 2">
   <p>Ouça a música que representa o espírito das Elias Empresas e como ela foi criada.</p>
   <audio controls>
-    <source src="https://arquivos.eliasempresas.com/arquivos/videos/Música oficial das Elias Empresas.mp4" type="audio/mpeg">
+    <source src="https://arquivos.eliasempresas.rf.gd/arquivos/videos/Música oficial das Elias Empresas.mp4" type="audio/mpeg">
     Seu navegador não suporta o player de áudio.
   </audio>
 </body>
