--- a/servidor/index.html
+++ b/servidor/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Servidor Elias Empresas</title>
-  <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.com/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
+  <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: "Segoe UI", sans-serif; margin: 0; background: #f5f5f5; }
@@ -23,7 +23,7 @@
   <header>
     <h1>Servidor Elias Empresas</h1>
     <p>Compatível com Bedrock e Java na mesma porta: <code>55555</code></p>
-    <a href="https://id.eliasempresas.com/autorizacao/servidor" class="link-button">Entrar com sua conta</a>
+    <a href="https://id.eliasempresas.rf.gd/autorizacao/servidor" class="link-button">Entrar com sua conta</a>
   </header>
 
   <main>
@@ -32,7 +32,7 @@
 
     <h2>Conexão</h2>
     <ul>
-      <li><strong>IP:</strong> <code>servidor.eliasempresas.com</code></li>
+      <li><strong>IP:</strong> <code>servidor.eliasempresas.rf.gd</code></li>
       <li><strong>Porta:</strong> <code>55555</code></li>
     </ul>
 
@@ -44,7 +44,7 @@
     </ul>
 
     <h2>Loja</h2>
-    <a href="https://www.eliasempresas.com/servidor/loja" class="link-button">Acessar Loja do Servidor</a>
+    <a href="loja.html" class="link-button">Acessar Loja do Servidor</a>
   </main>
 </body>
 </html>
