--- a/servidor/loja.html
+++ b/servidor/loja.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Loja do Servidor - Elias Empresas</title>
-  <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.com/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
+  <link rel="icon" type="image/png" href="https://arquivos.eliasempresas.rf.gd/ARQUIVOS/IMAGENS/LOGO%20DAS%20ELIAS%20EMPRESAS%20(1-1).png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #f7f7f7; }
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="login-bar">
-    <a href="https://id.eliasempresas.com/autorizacao/servidor">Entrar com sua conta</a>
+    <a href="https://id.eliasempresas.rf.gd/autorizacao/servidor">Entrar com sua conta</a>
   </div>
 
   <h1>Loja do Servidor Elias Empresas</h1>
