--- a/mapa.html
+++ b/mapa.html
@@ -41,6 +41,7 @@
             <li><a href="podcast/episodio2.html">Podcast Episódio 2</a></li>
             <li><a href="politica-de-privacidade.html">Política de Privacidade</a></li>
             <li><a href="termos-de-uso.html">Termos de Uso</a></li>
+            <li><a href="eula.html">Eula</a></li>
         </ul>
         
         <h3>ID EE</h3>
